force-app/main/default/objects/Apttus_Base2__UIComponentProviderMeta__mdt/Apttus_Base2__UIComponentProviderMeta__mdt.object-meta.xml
<CustomObject>
    <label>Apttus UI Component Provider Meta</label>
    <pluralLabel>Apttus UI Component Providers Meta</pluralLabel>
</CustomObject>