force-app/main/default/objects/Apttus_Base2__UIComponentProviderMeta__mdt/fields/Apttus_Base2__IsStandard__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Base2__IsStandard__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Standard</label>
    <type>Checkbox</type>
</CustomField>