force-app/main/default/objects/Apttus_Base2__UIComponentProviderMeta__mdt/fields/Apttus_Base2__ObjectName__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Base2__ObjectName__c</fullName>
    <label>Object</label>
    <length>128</length>
    <type>Text</type>
</CustomField>