force-app/main/default/objects/Apttus_Base2__UIComponentProviderMeta__mdt/fields/Apttus_Base2__PackageName__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Base2__PackageName__c</fullName>
    <label>Package Name</label>
    <length>15</length>
    <type>Text</type>
</CustomField>