force-app/main/default/objects/Apttus_Base2__UIComponentProviderMeta__mdt/fields/Apttus_Base2__Type__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Base2__Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Data</fullName>
            </value>
            <value>
                <fullName>Action</fullName>
            </value>
            <value>
                <fullName>Label</fullName>
            </value>
            <value>
                <fullName>Manifest</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>